# concurrent-modular-agent-fork-dev

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: dev_doc.yml  docs.yml  test.yml
concurrent_modular_agent/: __init__.py  agent.py  agent_interface.py  agent_runner.py  cli.py  entrypoint.py  message.py  module_main.py  module_main_wrapper.py  module_runner.py  retriever.py  runner.py  state.py  utils.py
concurrent_modular_agent/backend/: __init__.py  __main__.py  docker-compose.test.yml  docker-compose.yml
concurrent_modular_agent/backend/mosquitto/: docker-compose.yml
concurrent_modular_agent/backend/mosquitto/config/: mosquitto.conf
concurrent_modular_agent/cli/: __init__.py  agent_runner.py
concurrent_modular_agent/modules/: __init__.py  vision.py
concurrent_modular_agent/state/: __init__.py  client.py  custom_embedder.py  state.py
docs/: mkdocs.yml
docs/docs/: concepts.md  index.md
docs/docs/getting-started/: connecting-modules.md  creating-a-new-project.md  creating-modules.md  getting-started.md  installation.md  running-the-agent.md
docs/site/: 404.html  index.html
docs/site/concepts/: index.html
docs/site/getting-started/connecting-modules/: index.html
docs/site/getting-started/creating-a-new-project/: index.html
docs/site/getting-started/creating-modules/: index.html
docs/site/getting-started/getting-started/: index.html
docs/site/getting-started/installation/: index.html
docs/site/getting-started/running-the-agent/: index.html
docs/site/search/: search_index.json
examples/: chat.py  echo.py
examples/coma_interface/chat/: main.py  mod1.py  mod2.py
examples/coma_interface/chat_with_memory/: chat.py  memory_organizer.py  user_input.py
examples/project_interface/chat/: mod1.py
examples/python_interface/: chat.py  echo.py  vision.py
examples/python_interface/gemma_embedder/: memorer_recaller.py
tests/: conftest.py  test_abretriever.py  test_agent.py  test_backend.py  test_message.py  test_module_runner.py  test_retriever.py  test_state.py  test_utils.py
