[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "concurrent_modular_agent"
authors = [{name = "maru-n", email = "norihiro.maruyama@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "chromadb",
    "paho_mqtt",
    "loguru",
    "openai",
    "lark"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]