[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "concurrent_modular_agent"
authors = [{name = "maru-n", email = "norihiro.maruyama@gmail.com"}]
requires-python = ">=3.13"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "chromadb==1.3.4",
    "paho_mqtt",
    "loguru",
    "openai",
    "lark",
    "watchdog",
    "opencv-python",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
cma = "concurrent_modular_agent.cli:main"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
